--- a/ParrotWings/appsettings.json
+++ b/ParrotWings/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ParrotWings;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Database=parrot-wings;Username=postgres;Password=mysecretpassword"
   },
   "Logging": {
     "LogLevel": {
