--- a/ParrotWings.Tests/ParrotWings.Tests.csproj
+++ b/ParrotWings.Tests/ParrotWings.Tests.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ParrotWings.Data\ParrotWings.Data.csproj" />
+    <ProjectReference Include="..\ParrotWings\ParrotWings.csproj" />
   </ItemGroup>
 
 </Project>
