--- a/ParrotWings/ClientApp/package.json
+++ b/ParrotWings/ClientApp/package.json
@@ -3,44 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "axios": "^0.19.2",
-    "connected-react-router": "^6.8.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@reduxjs/toolkit": "^1.6.1",
+    "axios": "^0.21.4",
+    "connected-react-router": "^6.9.1",
     "fontsource-roboto": "^2.2.6",
     "history": "^4.10.1",
-    "merge": "^1.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-hook-form": "^6.0.8",
-    "react-redux": "^7.2.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "merge": "^2.1.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-hook-form": "^6.15.8",
+    "react-redux": "^7.2.5",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/history": "4.7.3",
     "@types/jest": "24.0.19",
     "@types/node": "12.11.6",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.5",
-    "@typescript-eslint/parser": "^2.5.0",
+    "@types/react": "^16.14.15",
+    "@types/react-dom": "^16.9.14",
+    "@types/react-redux": "^7.1.18",
+    "@types/react-router": "^5.1.16",
+    "@types/react-router-dom": "^5.1.9",
+    "@typescript-eslint/parser": "^2.34.0",
     "cross-env": "^6.0.3",
     "eslint": "^6.8.0",
     "eslint-plugin-flowtype": "^3.13.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.3",
-    "react-dev-utils": "^10.2.1",
-    "redux-devtools-extension": "^2.13.8",
-    "typescript": "^3.7.5"
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.25.1",
+    "react-dev-utils": "^11.0.4",
+    "redux-devtools-extension": "^2.13.9",
+    "typescript": "^3.9.10"
   },
   "scripts": {
     "start": "react-scripts start",
